[package]
name = "mygraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
nalgebra = "0.32.3"
nalgebra-sparse = "0.9.0"
rayon = "1.5.1"
log = "0.4.19"
env_logger = "0.9.3"
